Prof Office Hours 8

--- a/Notes/Unit6/Unit6.tex
+++ b/Notes/Unit6/Unit6.tex
@@ -933,5 +933,78 @@
 
 
 
+\section{Office Hours (Anderson)}
+\begin{itemize}
+    \item Is $\frac{W_n}{n}$ is the average molecular weight?
+    \item Using heptane as a fuel?
+    \begin{itemize}
+        \item You can burn just about anything, but it's just a matter of efficiency.
+        \item Octane is the best.
+        \item Heptane is too explosive and causes a lot of knocking.
+    \end{itemize}
+    \item Lecture 21: Contradiction between "Internal \ce{C-H} bonds are typically more reactive" and Shilov's conclusion that you get "higher degrees of substitution at less substituted carbons."
+    \item What is regiochemistry?
+    \begin{itemize}
+        \item Selection between two constitutional isomers.
+    \end{itemize}
+    \item Quiz 5.2 (Directed hydrogenation on page 79 of my notes?)?
+    \begin{itemize}
+        \item Geminal $>$ quaternary $>$ ester.
+        \begin{itemize}
+            \item In general, it's easier to hydrogenate olefins than ketones than esters.
+        \end{itemize}
+        \item The alcohol could serve as a directing group, but that's also the more sterically encumbered face.
+        \item Since the face is so sterically encumbered, we'll need a not very encumbered catalyst.
+        \item Such a catalyst will be more susceptible to the directing group.
+    \end{itemize}
+    \item $C_i$ vs. $C_1$ (Quiz 6.1)?
+    \item How does Problem 3 have two cycles?
+    \item Do we need to know the mechanism for the Cativa process (you said we don't in the lecture, but it's asked about in HW 5.1-a and Problem 3)?
+    \begin{itemize}
+        \item We don't have to memorize it, but we may need to discuss it.
+    \end{itemize}
+    \item Penalty for submitting late?
+    \begin{itemize}
+        \item 5-10 points for the first 5 minutes, and then another 10 points for the next, maybe.
+        \item He reserves the right to give us a 0 for submitting late, so don't.
+        \item Every year, the first midterm is too long and people flunk it and the next midterm's average is like 30 points higher.
+    \end{itemize}
+    \item How can we answer questions like worksheet 6-1 (Brookhart type catalysts)?
+    \item You briefly mentioned \ce{H2} as a method of termination for olefin polymerization, but it seems like we've only ever used $\beta$-\ce{H} elimination. When would we use \ce{H2}? Or did you just mention it so that we're aware of it?
+    \begin{itemize}
+        \item True dissociative substitutions are pretty rare and unfavorable.
+    \end{itemize}
+    \item Worksheet 6-3: How does "Wacker oxidation for an alcohol" refer to generating \ce{R-OR}?
+    \item Does it matter where you start when drawing your catalytic cycle?
+    \begin{itemize}
+        \item As long as you can string together a catalytic sequence, it doesn't matter where you start.
+    \end{itemize}
+    \item Lectures 20, 21, 22?
+    \begin{itemize}
+        \item 21, 22 not on this midterm.
+        \item 20 is fair game.
+    \end{itemize}
+    \item When drawing mechanisms for an exam, should we show oxidation states and charge?
+    \begin{itemize}
+        \item Yes we should.
+        \item Considering time, draw a bare bones mechanism (whatever you can pull out of your head) as fast as possible and then fill in specifics later.
+    \end{itemize}
+    \item Suzuki question:
+    \begin{itemize}
+        \item You would have to do oxidative addition of the \ce{B-C} bond. This is very hard to do with a phenyl group, so no, that would not work.
+    \end{itemize}
+    \item Potential energy wells in Figures \ref{fig:KIE-normal} and \ref{fig:KIE-inverse}?
+    \begin{itemize}
+        \item The amount of potential energy needed to go from one end of a line to another end of a line is equal to the distance between the middle of the line and the bottom of the well.
+    \end{itemize}
+    \item Dehydrogenation?
+    \begin{itemize}
+        \item Forwards/backwards.
+    \end{itemize}
+    \item No logistical differences between this exam and the last one.
+\end{itemize}
+
+
+
 
 \end{document}
