--- a/main.bib
+++ b/main.bib
@@ -133,7 +133,7 @@
 @article{bib:AllenSenoff,
     title = {Nitrogenopentammineruthenium({II}) Complexes},
     author = {A. D. Allen and C. V. Senoff},
-    journal = {Chemistry Communications (London)},
+    journal = {Chem. Commun.},
     number = {24},
     pages = {621-622},
     year = {1965},
@@ -143,7 +143,7 @@
 @article{bib:Yamamoto,
     title = {Synthesis and Properties of Hydridodinitrogentris(triphenylphosphine)cobalt({I}) and the Related Phosphine-CCobalt Complexes},
     author = {Akio Yamamoto and Shoji Kitazume and Lyong Sun Pu and Sakuji Ikeda},
-    journal = {Journal of the American Chemical Society},
+    journal = {J. Am. Chem. Soc.},
     volume = {93},
     number = {2},
     pages = {371-380},
@@ -154,12 +154,27 @@
 @article{bib:Chatt,
     title = {Recent Advances in the Chemistry of Nitrogen Fixation},
     author = {Joseph Chatt and Jonathan R Dilworth and Raymond L Richards},
-    journal = {Chemical Reviews},
+    journal = {Chem. Rev.},
     volume = {78},
     number = {6},
     pages = {589-625},
     year = {1978},
     doi = {10.1021/cr60316a001}
+}
+
+@article{bib:Intermediates146,
+    title = {Synthesis and Reactions of Molybdenum Triamidoamine Complexes Containing Hexaisopropylterphenyl Substituents},
+    author = {Dmitry V Yandulov and Richard R Schrock and Arnold L Rheingold and Christopher Ceccarelli and William M Davis},
+    journal = {Inorg. Chem.},
+    volume = {42},
+    number = {3},
+    pages = {796-813},
+    doi = {10.1021/ic020505l}
+}
+
+@unpublished{bib:Intermediates235,
+    author = {Dmitry V Yandulov},
+    note = {unpublished data}
 }
 
 @article{bib:HalpernHydrogenation,
